--- a/feature-account-api/build.gradle
+++ b/feature-account-api/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation project(':runtime')
     implementation project(":common")
     implementation project(":feature-currency-api")
+    implementation project(':web3names')
 
     implementation project(":feature-ledger-api")
 
