--- a/feature-account-impl/build.gradle
+++ b/feature-account-impl/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation project(':feature-currency-api')
     implementation project(':feature-ledger-api')
     implementation project(':feature-versions-api')
+    implementation project(':web3names')
 
     implementation kotlinDep
 
