--- a/web3names/build.gradle
+++ b/web3names/build.gradle
@@ -11,6 +11,7 @@ android {
         targetSdkVersion rootProject.targetSdkVersion
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "SLIP_44_COINS_BASE_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/assets/slip44.json\""
     }
 
     buildTypes {
