Integrity check prototype WIP

--- a/web3names/build.gradle
+++ b/web3names/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation daggerDep
     kapt daggerKapt
 
+    implementation multibaseDep
+
     testImplementation project(':test-shared')
 
     androidTestImplementation androidTestRunnerDep
