change all urls to ipfs config

--- a/feature-dapp-impl/build.gradle
+++ b/feature-dapp-impl/build.gradle
@@ -13,7 +13,7 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        buildConfigField "String", "DAPP_METADATAS_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/dapps/dapps_dev.json\""
+        buildConfigField "String", "DAPP_METADATAS_URL", "\"https://config2.novasama.uz/dapps/dapps_dev.json\""
     }
 
     buildTypes {
@@ -21,7 +21,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
-            buildConfigField "String", "DAPP_METADATAS_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/dapps/dapps_full.json\""
+            buildConfigField "String", "DAPP_METADATAS_URL", "\"https://config2.novasama.uz/dapps/dapps_full.json\""
         }
     }
 
