--- a/runtime/build.gradle
+++ b/runtime/build.gradle
@@ -12,10 +12,10 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildConfigField "String", "CHAINS_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/chains/v9/chains_dev.json\""
-        buildConfigField "String", "EVM_ASSETS_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/assets/evm/v2/assets_dev.json\""
+        buildConfigField "String", "CHAINS_URL", "\"https://config2.novasama.uz/chains/v10/chains_dev.json\""
+        buildConfigField "String", "EVM_ASSETS_URL", "\"https://config2.novasama.uz/assets/evm/v2/assets_dev.json\""
 
-        buildConfigField "String", "TEST_CHAINS_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/tests/chains_for_testBalance.json\""
+        buildConfigField "String", "TEST_CHAINS_URL", "\"https://config2.novasama.uz/tests/chains_for_testBalance.json\""
 
         buildConfigField "String", "INFURA_API_KEY", readSecret("INFURA_API_KEY")
     }
@@ -29,8 +29,8 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
-            buildConfigField "String", "CHAINS_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/chains/v9/chains.json\""
-            buildConfigField "String", "EVM_ASSETS_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/assets/evm/v2/assets.json\""
+            buildConfigField "String", "CHAINS_URL", "\"https://config2.novasama.uz/chains/v9/chains.json\""
+            buildConfigField "String", "EVM_ASSETS_URL", "\"https://config2.novasama.uz/evm/v2/assets.json\""
         }
     }
 
