--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,6 +128,10 @@ android {
             createBindReleaseFileTask(variant.buildType.name)
         }
     }
+
+    packagingOptions {
+        resources.excludes.add("META-INF/versions/9/previous-compilation-data.bin")
+    }
 }
 
 void createBindReleaseFileTask(String destination) {
@@ -232,6 +236,9 @@ dependencies {
     implementation insetterDep
 
     implementation liveDataKtxDep
+
+    implementation walletConnectCoreDep, withoutTransitiveAndroidX
+    implementation walletConnectWalletDep, withoutTransitiveAndroidX
 
     kaptAndroidTest daggerKapt
 
