--- a/feature-dapp-impl/build.gradle
+++ b/feature-dapp-impl/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     implementation project(':feature-dapp-api')
     implementation project(':feature-currency-api')
     implementation project(':runtime')
-    implementation project(':web3names')
+    implementation project(':caip')
 
     implementation kotlinDep
 
