--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,5 @@ include ':web3names'
 include ':caip'
 include ':feature-external-sign-api'
 include ':feature-external-sign-impl'
+include ':feature-wallet-connect-api'
+include ':feature-wallet-connect-impl'
