Wallet Connect entry point

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -209,6 +209,9 @@ dependencies {
     implementation project(':feature-wallet-connect-api')
     implementation project(':feature-wallet-connect-impl')
 
+    implementation project(':feature-settings-api')
+    implementation project(':feature-settings-impl')
+
     implementation kotlinDep
 
     implementation androidDep
