--- a/settings.gradle
+++ b/settings.gradle
@@ -30,3 +30,5 @@ include ':feature-external-sign-api'
 include ':feature-external-sign-impl'
 include ':feature-wallet-connect-api'
 include ':feature-wallet-connect-impl'
+include ':feature-settings-api'
+include ':feature-settings-impl'
