Add wallet connect secrets to ci

--- a/feature-wallet-connect-impl/build.gradle
+++ b/feature-wallet-connect-impl/build.gradle
@@ -15,6 +15,8 @@ android {
         targetSdkVersion rootProject.targetSdkVersion
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "WALLET_CONNECT_PROJECT_ID", readSecret("WALLET_CONNECT_PROJECT_ID")
     }
 
     buildTypes {
