--- a/feature-staking-impl/build.gradle
+++ b/feature-staking-impl/build.gradle
@@ -13,6 +13,9 @@ android {
         targetSdkVersion rootProject.targetSdkVersion
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        // TODO use production url
+        buildConfigField "String", "DASHBOARD_SUBQUERY_URL", "\"192.168.0.148:3000\""
     }
 
     buildTypes {
