Staking dashboard ui

--- a/feature-staking-impl/build.gradle
+++ b/feature-staking-impl/build.gradle
@@ -15,7 +15,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         // TODO use production url
-        buildConfigField "String", "DASHBOARD_SUBQUERY_URL", "\"http://192.168.0.148:3000\""
+        buildConfigField "String", "DASHBOARD_SUBQUERY_URL", "\"https://subql.novasama.uz\""
     }
 
     buildTypes {
