--- a/feature-staking-impl/build.gradle
+++ b/feature-staking-impl/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation project(':feature-wallet-api')
     implementation project(':feature-currency-api')
     implementation project(':feature-ledger-api')
+    implementation project(':feature-dapp-api')
     implementation project(':runtime')
 
     implementation kotlinDep
